# codeforces

./: .ccls  .gitignore  CMakeLists.txt
Header Files/: DoubleLinkedList.h  SimpleLinkedList.h  SimpleList.h  Utility.h
Header Files/800/: Watermelon.h
Source Files/: Test.cpp  main.cpp
Source Files/000/: AddTwoNumbers.cpp  Anagram.cpp  BSTNode.cpp  DoubleLinkedList.cpp  Factorial.cpp  LongestCommonPrefix.cpp  Node.cpp  PalindromeNumber.cpp  QueenProblem.cpp  RecursionSolutions.cpp  RomanToInteger.cpp  SimpleLinkedList.cpp  SimpleList.cpp  StringToInteger.cpp  SubArrayMaxSum.cpp  Test.cpp
Source Files/1000/: CapsLock.cpp  ChatRoom.cpp  Expression.cpp  LuckyDivision.cpp  StringTask.cpp  YoungPhysicist.cpp
Source Files/800/: AddOddOrSubtractEven.cpp  AgainTwentyFive.cpp  AmusingJoke.cpp  AntonAndDanik.cpp  AntonAndLetters.cpp  AntonAndPolyhedrons.cpp  ArrivalOfTheGeneral.cpp  BachgoldProblem.cpp  BalancedArray.cpp  BearAndBigBrother.cpp  BeautifulMatrix.cpp  BeautifulYear.cpp  BitPlusPlus.cpp  BlackSquare.cpp  BoringApartments.cpp  Borze.cpp  BoyOrGirl.cpp  BrainsPhotos.cpp  BuyAShovel.cpp  CalculatingFunction.cpp  CandiesAndTwoSisters.cpp  CardsForFriends.cpp  ChoosingTeams.cpp  CollectingCoins.cpp  DesignTutorialLearnFromMath.cpp  DieRoll.cpp  DislikeOfThrees.cpp  DivisibilityProblem.cpp  DoNotBeDistracted.cpp  DominoPiling.cpp  Drinks.cpp  Elephant.cpp  EvenArray.cpp  FafaAndHisCompany.cpp  FairDivision.cpp  FairPlayoff.cpp  FashionabLee.cpp  FoxAndSnake.cpp  Games.cpp  GeorgeAndAccommodation.cpp  (+61 more)
Source Files/900/: 01Game.cpp  ArrayReodering.cpp  BadBoy.cpp  (+33 more)
